# jupysql

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUILD.md  COMPILE.md  CONTRIBUTING.md  DATABASE_WIDGETS.md  Dockerfile  Dockerfile.test  KUBERNETES_RBAC.md  LABEL_REFERENCE.md  MANIFEST.in  PRODUCTION.md  PROVIDERS_IMPLEMENTATION.md  QUICKSTART_CNPG.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  WIDGET_IMPLEMENTATION.md  docker-compose.yml  install.json  package..bakjson  package.json  pyproject.toml  setup.py  shell.nix  test_providers.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  deploy-docs.yaml  docker-publish.yml
doc/: _config.yml  _toc.yml  conf.py  kubernetes-installation.md
doc/community/: support.md
doc/integrations/: mssql.ipynb  redshift.ipynb  trinodb.ipynb
doc/jupyterlab/: format-sql.ipynb
doc/tutorials/: etl.md
doc/user-guide/: table_explorer.ipynb
examples/: database_browser_example.ipynb  kubernetes-cnpg-setup.yaml  using_providers.py
jupysql_labextension/: .gitignore  .pnp.cjs  package-lock.json  package.json  tsconfig.json
jupysql_labextension/src/: index.ts  sidebar.tsx
jupysql_labextension/src/components/: DatabaseTree.tsx
jupysql_labextension/src/services/: api.ts
jupysql_labextension/style/: index.css  index.js
jupyter-config/jupyter_server_config.d/: jupysql.json
memory/: MEMORY.md  project_jupysql.md
notebooks/: .gitkeep  Untitled1.ipynb  Untitled2.ipynb
scripts/: 00-jupysql-autoload.py
src/sql/: error_handler.py  magic.py  traits.py  util.py
src/sql/connection/: connection.py
src/sql/labextension/: __init__.py  app.py  handlers.py
src/sql/providers/: README.md  __init__.py  base.py  cnpg.py  config_file.py  factory.py  static.py
src/sql/run/: resultset.py
src/sql/widgets/: __init__.py
src/sql/widgets/database_browser/: __init__.py  database_browser.py
src/sql/widgets/database_browser/css/: databaseBrowser.css
src/sql/widgets/database_browser/js/: databaseBrowser.js
src/sql/widgets/database_selector/: __init__.py  database_selector.py
src/tests/: test_ggplot.py  test_magic.py  test_resultset.py
src/tests/integration/: test_questDB.py
tests/selenium/: conftest.py  test_jupyterlab.py
(+2 files in other folders)
