# For now, use setuptools for compatibility
# The hatchling build system will be enabled once Node.js is available
# Uncomment the sections below when ready to build the JupyterLab extension

# [build-system]
# requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.8"]
# build-backend = "hatchling.build"

# Extension build configuration (requires Node.js)
# [tool.hatch.build.targets.sdist]
# exclude = [".github", "binder", "node_modules", "jupysql_labextension/lib"]

# [tool.hatch.build.targets.wheel.shared-data]
# "jupysql/labextension" = "share/jupyter/labextensions/jupysql-labextension"
# "install.json" = "share/jupyter/labextensions/jupysql-labextension/install.json"

# [tool.hatch.build.hooks.jupyter-builder]
# dependencies = ["hatch-jupyter-builder>=0.8"]
# build-function = "hatch_jupyter_builder.npm_builder"
# ensured-targets = ["jupysql/labextension/static/style.js", "jupysql/labextension/package.json"]
# skip-if-exists = ["jupysql/labextension/static/style.js"]

# [tool.hatch.build.hooks.jupyter-builder.build-kwargs]
# path = "jupysql_labextension"
# build_cmd = "build:prod"
# npm = ["jlpm"]

# [tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
# path = "jupysql_labextension"
# build_cmd = "install:extension"
# source_dir = "src"
# build_dir = "lib"
# npm = ["jlpm"]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.pkgmt]
github = "ploomber/jupysql"
env_name = "jupysql"
package_name = "sql"

[tool.pkgmt.check_links]
extensions = ["md", "rst", "py", "ipynb"]
ignore_substrings = [
    "d37ci6vzurychx.cloudfront.net",
    "https://bornsql.ca",
    "127.0.0.1",
    "http://localhost",
    "https://localhost",
    "platform.ploomber.io",
    "https://ourworldindata.org",
]

[tool.nbqa.addopts]
flake8 = [
    # notebooks allow non-top imports
    "--extend-ignore=E402",
    # jupysql notebooks might have "undefined name" errors
    # due to the << operator
    # W503, W504 ignore line break after/before 
    # binary operator since they are conflicting 
    "--ignore=F821, W503, W504",
]

[tool.codespell]
skip = '.git,_build,build,*.drawio,*.ipynb'
ignore-words-list = 'whis'
